# taskium

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
core/: logger.cpp  logger.hpp
include/: safe_queue.hpp  thread_pool.hpp  worker.hpp
scripts/: build.sh  run.sh
src/: main.cpp  thread_pool.cpp  worker.cpp
tests/: cli_config.cpp  cli_config.hpp  main.cpp  pi.cpp  pi.hpp
